app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
    background-image: url('../public/gradientMobile.svg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

section {
    min-height: 100dvh;
    padding-top: 100px;


}

